--- a/.github/workflows/CrossVersion.yml
+++ b/.github/workflows/CrossVersion.yml
@@ -64,6 +64,8 @@ jobs:
 
       - name: Unit Test
         shell: bash
+        env:
+         SUMMARIZE_FAILURES: 1
         run: |
           ./build/release/test/unittest --force-storage --test-temp-dir my_local_folder || true
           rm -rf my_local_folder/hive
@@ -217,6 +219,8 @@ jobs:
 
       - name: Unit Test
         shell: bash
+        env:
+         SUMMARIZE_FAILURES: 1
         run: |
           ./build/release/test/unittest --force-storage --test-temp-dir my_local_folder || true
           rm -rf my_local_folder/hive
