--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -206,6 +206,8 @@ jobs:
 
     - name: Test
       shell: bash
+      env:
+        SUMMARIZE_FAILURES: 1
       run: |
           build/release/test/unittest "*"
 
@@ -276,6 +278,8 @@ jobs:
 
       - name: Test
         shell: bash
+        env:
+         SUMMARIZE_FAILURES: 1
         run: build/release/test/unittest
 
   linux-tarball:
