--- a/.github/workflows/CrossVersion.yml
+++ b/.github/workflows/CrossVersion.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: macos-14
     strategy:
       matrix:
-        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.2-histrionicus', 'v1.3-ossivalis', 'main' ]
+        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.3-ossivalis', 'main' ]
       fail-fast: false
     env:
       EXTENSION_CONFIGS: '${GITHUB_WORKSPACE}/.github/config/bundled_extensions.cmake'
@@ -91,7 +91,7 @@ jobs:
       - linux-step-1
     strategy:
       matrix:
-        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.2-histrionicus', 'v1.3-ossivalis', 'main' ]
+        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.3-ossivalis', 'main' ]
       fail-fast: false
     env:
       EXTENSION_CONFIGS: '${GITHUB_WORKSPACE}/.github/config/bundled_extensions.cmake'
@@ -140,10 +140,6 @@ jobs:
           path: osx_v1_2_1
       - uses: actions/download-artifact@v4
         with:
-          name: files-osx-v1.2-histrionicus
-          path: osx_v1_2-histrionicus
-      - uses: actions/download-artifact@v4
-        with:
           name: files-osx-v1.3-ossivalis
           path: osx_v1_3-ossivalis
       - uses: actions/download-artifact@v4
@@ -162,10 +158,6 @@ jobs:
         with:
           name: files-linux-v1.2.1
           path: linux_v1_2_1
-      - uses: actions/download-artifact@v4
-        with:
-          name: files-linux-v1.2-histrionicus
-          path: linux_v1_2-histrionicus
       - uses: actions/download-artifact@v4
         with:
           name: files-linux-v1.3-ossivalis
@@ -197,7 +189,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.2-histrionicus', 'v1.3-ossivalis', 'main' ]
+        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.3-ossivalis', 'main' ]
       fail-fast: false
     env:
       EXTENSION_CONFIGS: '${GITHUB_WORKSPACE}/.github/config/bundled_extensions.cmake'
@@ -254,7 +246,7 @@ jobs:
       - linux-step-1
     strategy:
       matrix:
-        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.2-histrionicus', 'v1.3-ossivalis', 'main' ]
+        version: [ 'v1.0.0', 'v1.1.3', 'v1.2.1', 'v1.3-ossivalis', 'main' ]
       fail-fast: false
     env:
       EXTENSION_CONFIGS: '${GITHUB_WORKSPACE}/.github/config/bundled_extensions.cmake'
@@ -304,10 +296,6 @@ jobs:
           path: osx_v1_2_1
       - uses: actions/download-artifact@v4
         with:
-          name: files-osx-v1.2-histrionicus
-          path: osx_v1_2-histrionicus
-      - uses: actions/download-artifact@v4
-        with:
           name: files-osx-v1.3-ossivalis
           path: osx_v1_3-ossivalis
       - uses: actions/download-artifact@v4
@@ -328,10 +316,6 @@ jobs:
           path: linux_v1_2_1
       - uses: actions/download-artifact@v4
         with:
-          name: files-linux-v1.2-histrionicus
-          path: linux_v1_2-histrionicus
-      - uses: actions/download-artifact@v4
-        with:
           name: files-linux-v1.3-ossivalis
           path: linux_v1_3-ossivalis
       - uses: actions/download-artifact@v4
@@ -343,7 +327,7 @@ jobs:
         shell: bash
         run: |
           touch report
-          for folder in osx_v1_0_0 osx_v1_1_3 osx_main linux_main linux_v1_0_0 linux_v1_1_3 linux_v1_2_1 linux_v1_2 osx_v1_2_1 osx_v1_2; do
+          for folder in osx_v1_0_0 osx_v1_1_3 osx_main osx_v1_3-ossivalis linux_main linux_v1_3-ossivalis linux_v1_0_0 linux_v1_1_3 linux_v1_2_1 linux_v1_2 osx_v1_2_1 osx_v1_2; do
             for filename in $folder/*; do
               touch $filename.wal && cp $filename.wal a.db.wal 2>/dev/null && cp $filename a.db 2>/dev/null && (./build/release/duckdb a.db -c "ATTACH 'b.db'; COPY FROM DATABASE a TO b;" 2>out || (grep "but it is not a valid DuckDB database file!" out 2>/dev/null || ( echo "--> " $filename && cat out && echo "" && (grep -i "internal error" out && echo "--> " $filename >> report && cat out >> report && echo "" >> report)))) || true
               rm -f b.db a.db b.db.wal a.db.wal
