--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -293,7 +293,11 @@
         "name": "disable_database_invalidation",
         "description": "Disables invalidating the database instance when encountering a fatal error. Should be used with great care, as DuckDB cannot guarantee correct behavior after a fatal error.",
         "type": "BOOLEAN",
-        "scope": "global"
+        "scope": "global",
+        "on_callbacks": [
+            "set",
+            "reset"
+        ]
     },
     {
         "name": "disable_timestamptz_casts",
