Disable constexpr std::mutex on Windows
On Windows the `constexpr` constructor of `std::mutex`, that was
supposed to be there since C++11, was not implemented until VS2022.
Its implementation has required to use Slim Reader/Writer (SRW) Locks
([ref](https://learn.microsoft.com/en-us/windows/win32/sync/slim-reader-writer--srw--locks))
that are only supported since Window 7, but VS2019 was still supporting
Windows Vista as a target ([more details from SO](https://stackoverflow.com/a/74255773)).

The implementation of `constexpr std::mutex` in MSVC has required the
ABI breakage in C++ STL that was eventually added in VS2022 17.10
([commit](https://github.com/microsoft/STL/commit/4aad4b84d69e033d47215ff7d35bdee3e3b66b62)).
This commit has introduced the macro
`_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR` that can be defined to stay ABI
compatible with older versions of C++ stdlib. Thus the binaries built
with VS2022 17.10 or later and without this macro cannot be run with
older versions of C++ stdlib `msvcp140.dll` even if they do not use
`constexpr std::mutex` - any mutex usage will crash with something like
this ([more examples and comments from MSFT](https://web.archive.org/web/20250618223106/https://developercommunity.visualstudio.com/t/Access-violation-in-_Thrd_yield-after-up/10664660)):

```
Faulting application name: duckdb.exe, version: 1.3.1.0, time stamp: 0x684fdb82
Faulting module name: MSVCP140.dll, version: 14.36.32532.0, time stamp: 0x04a30cf0
Exception code: 0xc0000005
```

This PR adds the `_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR` macro
definition to Windows builds assuming that we are not going to use
`constexpr` constructor of `std::mutex` and we want to be able to run
with `msvcp140.dll` while being compiled with newer toolchains.

Note, that running binaries, that were built against `msvcp140.dll`
version `14.40+`, in environment with earlier versions `msvcp140.dll` is
not officially supported by MSFT ([ref](https://learn.microsoft.com/en-us/cpp/porting/binary

--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -98,6 +98,14 @@ jobs:
       run: |
         test/Release/unittest.exe
 
+    - name: Test with VS2019 C++ stdlib
+      shell: bash
+      if: ${{ inputs.skip_tests != 'true' }}
+      run: |
+        cd test/Release && wget https://blobs.duckdb.org/ci/msvcp140.dll
+        test/Release/unittest.exe
+        rm test/Release/msvcp140.dll
+
     - name: Tools Test
       shell: bash
       if: ${{ inputs.skip_tests != 'true' }}
