--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -31,6 +31,7 @@ env:
 jobs:
   linux-memory-leaks:
      name: Linux Memory Leaks
+     if: github.event.pull_request.draft == false
      runs-on: ubuntu-24.04
      env:
        GEN: ninja
@@ -65,6 +66,7 @@ jobs:
 
   release-assert:
     name: Release Assertions
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     needs: linux-memory-leaks
     env:
@@ -101,6 +103,7 @@ jobs:
 
   release-assert-osx:
     name: Release Assertions OSX
+    if: github.event.pull_request.draft == false
     runs-on: macos-latest
     needs: linux-memory-leaks
     env:
@@ -138,6 +141,7 @@ jobs:
 
   release-assert-osx-storage:
     name: Release Assertions OSX Storage
+    if: github.event.pull_request.draft == false
     runs-on: macos-latest
     needs: linux-memory-leaks
     env:
@@ -175,6 +179,7 @@ jobs:
 
   smaller-binary:
     name: Smaller Binary
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -211,6 +216,7 @@ jobs:
 
   release-assert-clang:
     name: Release Assertions with Clang
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     needs: linux-memory-leaks
     env:
@@ -251,7 +257,7 @@ jobs:
     name: Linux (32 Bit)
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2_28_x86_64
-    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature' }}
+    if: github.event.pull_request.draft == false && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature')
     needs: linux-memory-leaks
     env:
       CC: /usr/bin/gcc
@@ -280,6 +286,7 @@ jobs:
 
   linux-tarball:
      name: Python 3 Tarball
+     if: github.event.pull_request.draft == false
      runs-on: ubuntu-22.04
      needs: linux-memory-leaks
      steps:
@@ -319,6 +326,7 @@ jobs:
 
   python-sqllogic:
      name: Python SQLLogicTest Library (Linux)
+     if: github.event.pull_request.draft == false
      runs-on: ubuntu-22.04
      env:
         GEN: ninja
@@ -353,6 +361,7 @@ jobs:
 
   sqllogic:
      name: Sqllogic tests
+     if: github.event.pull_request.draft == false
      runs-on: ubuntu-latest # Secondary task of this CI job is to test building duckdb on latest ubuntu
      needs: linux-memory-leaks
 
@@ -378,6 +387,7 @@ jobs:
 
   storage-initialization:
      name: Storage Initialization Verification
+     if: github.event.pull_request.draft == false
      runs-on: ubuntu-22.04
      needs: linux-memory-leaks
      env:
@@ -410,6 +420,7 @@ jobs:
 
   extension-updating:
     name: Extension updating test
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-22.04
     needs: linux-memory-leaks
     env:
@@ -460,6 +471,7 @@ jobs:
 
   force-blocking-sink-source:
     name: Forcing async Sinks/Sources
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -492,6 +504,7 @@ jobs:
 
   regression-test-memory-safety:
    name: Regression Tests between safe and unsafe builds
+   if: github.event.pull_request.draft == false
    runs-on: ubuntu-22.04
    needs: linux-memory-leaks
    env:
@@ -573,6 +586,7 @@ jobs:
 
   block-sizes:
     name: Block Sizes
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -616,7 +630,7 @@ jobs:
 
   linux-wasm-experimental:
     name: WebAssembly duckdb-wasm builds
-    if: false
+    if: false && github.event.pull_request.draft == false
     runs-on: ubuntu-22.04
     steps:
     - uses: mymindstorm/setup-emsdk@v12
@@ -690,6 +704,7 @@ jobs:
 
   codecov:
     name: Code Coverage
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-22.04
     needs: linux-memory-leaks
     env:
@@ -733,3 +748,4 @@ jobs:
   pyodide:
     uses: ./.github/workflows/Pyodide.yml
     secrets: inherit
+    if: github.event.pull_request.draft == false
